src/test/ui/const-len-underflow-separate-spans.stderr
error: attempt to subtract with overflow
  --> $DIR/const-len-underflow-separate-spans.rs:17:20
   |
LL | const LEN: usize = ONE - TWO;
   |                    ^^^^^^^^^
   |
   = note: #[deny(const_err)] on by default

error: referenced constant
  --> $DIR/const-len-underflow-separate-spans.rs:21:17
   |
LL | const LEN: usize = ONE - TWO;
   |                    --------- attempt to subtract with overflow
...
LL |     let a: [i8; LEN] = unimplemented!();
   |                 ^^^

error: this expression will panic at runtime
  --> $DIR/const-len-underflow-separate-spans.rs:21:17
   |
LL |     let a: [i8; LEN] = unimplemented!();
   |                 ^^^ referenced constant has errors

error[E0080]: referenced constant
  --> $DIR/const-len-underflow-separate-spans.rs:21:12
   |
LL | const LEN: usize = ONE - TWO;
   |                    --------- attempt to subtract with overflow
...
LL |     let a: [i8; LEN] = unimplemented!();
   |            ^^^^^^^^^

error[E0080]: could not evaluate constant expression
  --> $DIR/const-len-underflow-separate-spans.rs:21:12
   |
LL |     let a: [i8; LEN] = unimplemented!();
   |            ^^^^^---^
   |                 |
   |                 referenced constant has errors

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0080`.
